syntax = "proto3";
package cheqdid.cheqdnode.cheqd;

option go_package = "github.com/cheqd/cheqd-node/x/cheqd/types";

import "gogoproto/gogo.proto";

message CredDef {
  string author = 1;
  string schema_id = 2; 
  string tag = 3; 
  string signature_type = 4; 
  string value = 5;
}
